# authentication

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20241006115933_users.sql
backend/src/: db.rs  lib.rs
backend/src/constants/: auth.rs  auth_constants.rs  mod.rs  otc.rs  routes.rs  user.rs
backend/src/middleware/: jwt.rs  jwt_middleware.rs  language.rs  language_middleware.rs  mod.rs
backend/src/models/: auth.rs  auth_models.rs  general.rs  mod.rs  otc.rs  translations_models.rs  user.rs
backend/src/models/auth/: models.rs
backend/src/models/otc/: aliases.rs  mod.rs  models.rs
backend/src/models/user/: aliases.rs  models.rs
backend/src/queries/: auth.rs  auth_queries.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  auth_routes.rs  otc.rs  user.rs
backend/src/services/: auth.rs  auth_service.rs  mod.rs  otc.rs  user.rs
backend/src/templates/: mod.rs
backend/src/templates/auth/: mod.rs  password_reset_code.html  style.css
backend/src/templates/auth_templates/: confirm_account_creation.html  deleted_account.html  mod.rs  updated_account_new_email.html  (+3 more)
backend/src/traits/: has_headers.rs  mod.rs
backend/src/translations/: de.json  en.json  es.json  fr.json  mod.rs  nl.json
backend/src/utils/: auth.rs  auth_utils.rs  cookie.rs  cookie_utils.rs  dates.rs  emails.rs  env.rs  errors.rs  jwt.rs  jwt_utils.rs  mod.rs  otc.rs  redis.rs  redis_utils.rs  responses.rs  string_utils.rs  templates.rs  translations.rs  translations_utils.rs  user.rs  validation.rs
backend/tests/: user_validation_test.rs
(+212 files in other folders)
