[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth_server"
path = "src/bin/auth_server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.7"
tower = { version = "0.5.1", features = ["limit", "buffer"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.1.0"
serde = "1.0.210"
dotenv = "0.15.0"
redis = { version = "0.23", features = ["tokio-comp"] }
tera = "1"
lettre = "0.11.9"
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.95"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking"] }