[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
tower = { version = "0.5.2", features = ["limit", "buffer"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.3.1"
serde = "1.0.219"
dotenv = "0.15.0"
redis = { version = "0.23", features = ["tokio-comp"] }
tera = "1"
lettre = "0.11.15"
bcrypt = "0.15.1"
chrono = { version = "0.4.40", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
rand = "0.8.5"
regex = "1.11.1"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
